# naddycap

./: .gitignore  README.md  configure.ac
src/: CMakeLists.txt  CTestConfig.cmake  Makefile  argparser.c  argparser.cpp  args.h  config.c  event.c  event.cpp  main.c  main.cpp  naddycap.h  output_erf.c  output_pcap.c  pipeline.c  pipeline.cpp  plugin.h  process_anonymize.c  process_bpf.c  process_dropall.c  structs.h
src/CMakeScripts/: FindArgtable.cmake  FindLibconfig.cmake  FindLibtrace.cmake  FindLibwandevent.cmake
src/includes/: args.h  event.h  naddycap.h  plugin.h  structs.h
src/process_anonymize/: CMakeLists.txt  ip4.c  ip6.c  process_anonymize.c
src/process_anonymize/includes/: process_anonymize.h
